JSP 설정 및 테스트

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 # mybatis config
 mybatis.type-aliases-package=com.example.demo
 mybatis.mapper-locations=mybatis/mapper/*.xml
+
+
+# JSP config
+spring.mvc.view.prefix=/WEB-INF/
+spring.mvc.view.suffix=.jsp
